# supruglue

./: .bazelrc  .clang-format  .gitignore  .gitmodules  BUILD  BUILD.bazel  LICENSE  README.md  WORKSPACE  go.mod  local.sh  remote.sh
arch/: BUILD  bbb-am335x-pins.csv  ti-pruss-intr.csv
arch/am335x/: BUILD  am335x-map.csv  clock-per.csv  edma-tpcc.csv  embed.go  pru-iep.csv  pru-intc.csv  pwmss-ecap.csv  pwmss-epwm.csv  pwmss.csv  soc-ctrl.csv
examples/: BUILD  BUILD.bazel  example.c  local.c
examples/led_outin/: BUILD  README.md  led_outin.c
examples/pwm_outin/: BUILD  README.md  pwm_outin.c
examples/simple_timer/: BUILD  README.md  simple_timer.c
examples/two_leds/: BUILD  README.md  example.c  two_leds.c
examples/ui1203/: BUILD  ui1203.c
include/: gpio.h  soc.h
include/am335x/: gpio.h
kernel/: KERNEL.diff  README.md  build.sh  compile.sh  make.sh  run.sh  system.sh
kernel/docker/: Dockerfile  Makefile  run.sh  shell.sh
lib/args/: BUILD  args.c  args.h  args_test.cc
lib/cap/: BUILD  cap-defs.h
lib/cap/am335x/: BUILD  cap-am335x.c  pru_ecap_intr_pend.yaml
lib/cap/test32/: BUILD  cap-test32.cc  cap-test32.h
lib/coroutine/: BUILD  coroutine.c  coroutine.h  coroutine_test.cc
lib/cpx/: BUILD  BUILD.bazel  CorePartition.c  CorePartition.h  args.c  args.h  args_test.cc  cpx.c  cpx.h  cpx_test.cc  cpx_test_c.c  cpx_test_c.h  fmt.cc  library.properties
lib/debug/: BUILD  debug.c  debug.h
lib/dma/: BUILD  dma-defs.h  dma.h
lib/dma/am335x/: BUILD  dma-am335x.c  dma-am335x.h
lib/dma/test32/: BUILD  dma-test32.cc  dma-test32.h  dma_test.cc
lib/gpio/: BUILD  gpio-defs.h  gpio.h
lib/gpio/am335x/: BUILD  gpio.c  gpio.h
lib/gpio/test32/: BUILD  gpio.cc  gpio.h  gpio_test.cc
lib/initproc/: BUILD  initproc.c  initproc.h  initproc_test.cc
lib/intc/: BUILD  intc-defs.h  intc.h  intc_iface.h  service.c  service.h
lib/intc/am335x/: BUILD  README.md  intc.c  intc.h
lib/intc/test32/: BUILD  intc.cc  intc.h
lib/list/: BUILD  generic.c  generic.h  list.h  list_test.cc
lib/list/save/: generic.c  generic.h  list.h
lib/log/daemon/: BUILD  daemon.c  daemon.h  daemon_test.cc
lib/log/fmt/: BUILD  fmt.cc  fmt.h
lib/log/journal/: BUILD  journal.c  journal.h  journal_test.cc
lib/pinmap/: BUILD  pinmap-defs.h  pinmap_test.cc
lib/pwm/: BUILD  pwm-defs.h  pwm.h
lib/pwm/am335x/: BUILD  README.md  epwm0_intr_pend.yaml  epwm1_intr_pend.yaml  epwm2_intr_pend.yaml  pwm-am335x.c  pwm-am335x.h
lib/pwm/test32/: BUILD  pwm-test32.cc  pwm-test32.h  pwm_test.cc
lib/resource/: BUILD  table.c  table.h
lib/rpmsg/: BUILD  rpmsg-defs.h  rpmsg.h  rpmsg_am335x.c  rpmsg_iface.h  rpmsg_test.cc  rpmsg_test32.cc  rpmsg_test32.h  rpmsg_test32_test.cc
lib/rpmsg/am335x/: BUILD  pru1.yaml  rpmsg.c  rpmsg.h  rpmsg_am335x.c  rpmsg_am335x.h  rpmsg_am335x_client.c  rpmsg_am335x_iface.h
lib/rpmsg/test32/: BUILD  chan.h  rpmsg.cc  rpmsg.h  rpmsg_test.cc  rpmsg_test32_chan.h  rpmsg_test32_host.cc  rpmsg_test32_host.h  rpmsg_test32_test.cc
lib/soc/: BUILD  soc-defs.h  soc.c  soc.h  soc_test.cc
lib/soc/am335x/: BUILD  delay.s  sleep.s  soc.c  soc.h
lib/soc/test32/: BUILD  soc.cc  soc.h
lib/sync/: BUILD  sync.c  sync.h  sync_test.cc
lib/syslog/: BUILD  syslog.c  syslog.h  syslog_test.cc
lib/thread/: BUILD  thread.c  thread.h  thread_test.cc
lib/time/: BUILD  clock-defs.h  clock.c  clock.h  clock_test.cc  process.c  time-defs.h  time.c  time.h
lib/time/am335x/: BUILD  clock-am335x.c  clock-am335x.h  iep_tim_cap_cmp_pend.yaml  time-am335x.c  time-am335x.h  time.c  time.h
lib/time/clock/: BUILD  clock-defs.h  clock.c  clock.h  clock_test.cc  process.c  process.h
lib/time/clock/am335x/: BUILD  clock-am335x.c  clock-am335x.h  iep_tim_cap_cmp_pend.yaml
lib/time/clock/test32/: BUILD  clock-test32.cc  clock-test32.h  clock_test.cc
lib/time/period/: BUILD  epwm0_01.yaml  period-defs.h  period.c  period.h
lib/time/period/am335x/: BUILD  period-am335x.c  period-am335x.h
lib/time/period/test32/: BUILD  period-test32.cc  period-test32.h  period_test.cc
lib/time/test32/: BUILD  clock-test32.cc  clock-test32.h  test32<time>  time-test32.cc  time-test32.h  time.cc  time.h  time_test.cc
lib/ui1203/: BUILD  BUILD.bazel  ui1203.c  ui1203.h  ui1203_test.cc
save/: heap.c
save/cap/: cap-defs.h  cap.h
save/cap/am335x/: .#cap-am335x.c  BUILD  cap-am335x.c  cap-am335x.h
save/cap/test32/: cap-test32.cc  cap_test.cc
supruglue/: BUILD  gpio.h  pinmap.h  soc.h  supruglue.h
supruglue/am335x/: BUILD  gpio.h  soc.h
supruglue/am335x/include/: gpio.h
supruglue/test/include/: gpio.h  soc.h
supruglue/test32/: BUILD  BUILD.bazel  gpio.cc  gpio.h  soc.cc  soc.h
supruglue/test32/include/: gpio.h  soc.h
test/: BUILD  gpio.cc  gpio.h  gpio_test.cc  pinmap_test.cc  soc.cc  soc.h  soc_test.cc
tools/cmd/irqgen/: BUILD  irqgen.go
tools/cmd/pinmap/: BUILD  BUILD.bazel  main.go  pinmap.go
tools/cmd/supructl/: BUILD  main.go
tools/cmd/sysevts/: BUILD  sysevts.go
tools/download/: local.bzl  ti-cgt-pru.BUILD.bazel  ti-cgt-pru.linux.sh  ti-cgt-pru.sh
tools/internal/arch/: BUILD  BUILD.bazel  irq.go  module.go  pin.go  register.go  sysevt.go
tools/internal/csv/: BUILD  read.go
tools/internal/elfdata/: BUILD  elfdata.go
tools/internal/firmware/: BUILD  firmware.go
tools/internal/fwstate/: BUILD  fwstate.go
tools/internal/memorymap/: BUILD  memorymap.go
tools/internal/memorymap/am335x/: BUILD  module.go
tools/internal/remoteproc/: BUILD  remoteproc.go
tools/internal/rpmsghost/: BUILD  rpmsghost.go
tools/toolchain/: BUILD  BUILD.bazel  cc_toolchain_config.bzl  ti-cgt-pru.BUILD
tools/toolchain/am335x/: BUILD  pru0.cmd  pru0.yaml  pru1.yaml
tools/toolchain/ti-cgt-pru/: arpru  clpru  lnkpru
tools/toolchain/wrappers/: arpru  clpru  lnkpru
