package(default_visibility = ["//visibility:public"])

cc_toolchain_suite(
    name = "clpru_suite",
    toolchains = {
        "pru": ":pru_toolchain",
        "darwin": ":pru_toolchain",
    },
)

filegroup(name = "empty")

cc_toolchain(
    name = "pru_toolchain",
    toolchain_identifier = "pru-toolchain",
    toolchain_config = ":pru_toolchain_config",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
)

load(":cc_toolchain_config.bzl", "cc_toolchain_config")

cc_toolchain_config(name = "pru_toolchain_config")

constraint_setting(name = "pru_soc")

constraint_value(
    name = "am335x",
    constraint_setting = ":pru_soc",
)

constraint_value(
    name = "test32",
    constraint_setting = ":pru_soc",
)

# See https://github.com/bazelbuild/rules_go/issues/2591
# why for Go toolchain selection we list host platform os/cpu.
platform(
    name = "real_pru",
    constraint_values = [
	":am335x",
        "@platforms//os:osx",
        "@platforms//cpu:arm64",
        "@io_bazel_rules_go//go/toolchain:cgo_off",
    ],
)

platform(
    name = "fake_pru",
    constraint_values = [
	":test32",
        "@platforms//os:osx",
        "@platforms//cpu:arm64",
        "@io_bazel_rules_go//go/toolchain:cgo_off",
    ],
)
